# AF-Exercise

./: CMakeLists.txt  README.md
common/: common.h  pi.cpp
cuda/: CMakeLists.txt  pi.cu
opencl/: CMakeLists.txt
src/common/: common.h  pi.cpp
src/cuda/: pi.cu
src/opencl/: pi.cpp
